# crr-server

./: .gitignore  Cargo.toml  README.md  auth_migrations.sql
drizzle/: drizzle.config.ts  package.json  pnpm-lock.yaml  schema.ts
drizzle/migrations/: 0000_daily_hellfire_club.sql
drizzle/migrations/meta/: 0000_snapshot.json  _journal.json
drizzle/src/: index.ts
drizzle/tests/: simple.ts
extensions/: crsqlite-darwin-x86_64.dylib
kysely/: jest.config.mjs  package.json  pnpm-lock.yaml
kysely/src/: dialect.ts  migrations.ts
kysely/tests/: simple.ts
migrations/: 001_setup.sql
proxy/: package.json  pnpm-lock.yaml
proxy/src/: changeset.ts  index.ts  migration.ts
src/: app_state.rs  auth.rs  env.rs  error.rs  lib.rs  mail.rs  main.rs  metadata.rs  serde_base64.rs  tests.rs
src/auth/: database.rs  mod.rs  otp.rs  permissions.rs  signed_url.rs  table.rs  token.rs  user.rs
src/database/: changes.rs  changeset.rs  database.rs  migrate.rs  migrations.rs  mod.rs  run.rs  value.rs
src/database/changes/: change_manager.rs  changes_iter.rs  changeset.rs  database_handle.rs  message.rs  mod.rs  post.rs  signal.rs  stream.rs
tests/: drizzle.rs  kysely.rs  orms.rs  simple_drizzle_db.rs
