[package]
name = "vlcn-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
axum = "0.6.18"
axum-extra = { version = "0.7.4", features = ["cookie"] }
base64 = "0.21.0"
dotenv = "0.15.0"
futures = "0.3.28"
lazy_static = "1.4.0"
lettre = "0.10.3"
nanoid = "0.4.0"
regex = "1.8.2"
rusqlite = { version = "0.28.0", features = ["bundled", "load_extension", "hooks"]}
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
time = "0.3.21"
tokio = { version = "1.28.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

